GPU subdivision: vertex paintmask: vertices (or their selection status) not visible in weightpaint/vertexpaint #102519

Closed
opened 2022-11-15 07:01:51 +01:00 by Andrew Brunton · 17 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 Ti with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Broken: version: 3.1.0

Short description of error
In Weight/Vertex Paint mode, with Vertex Selection ON, vertices are not visible if mesh has a subdivision modifier and GPU subdivision is used.
Vertices might be visible in weightpaint (depending on GPU used), when they are, selected vs. unselected is looking the same, they cannot be distinguished.
(the selection is actually working for painting though)

Exact steps for others to reproduce the error

#102519.blend

  • open .blend
  • enter vertex paintmode >> no verts are visible (even if you can select them clicking in the right spots)
  • enter weight paintmode >> verts are invisible (GeForce GTX 1650), visible (GeForce RTX 3080) but selected points draw the same as unselected
  • (painting would actually respect the selection that is made though)
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 Ti with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Broken: version: 3.1.0 **Short description of error** In Weight/Vertex Paint mode, with Vertex Selection ON, vertices are not visible if mesh has a subdivision modifier and GPU subdivision is used. Vertices might be visible in weightpaint (depending on GPU used), when they are, selected vs. unselected is looking the same, they cannot be distinguished. (the selection is actually working for painting though) **Exact steps for others to reproduce the error** [#102519.blend](https://archive.blender.org/developer/F13917603/T102519.blend) - open .blend - enter vertex paintmode >> no verts are visible (even if you can select them clicking in the right spots) - enter weight paintmode >> verts are invisible (GeForce GTX 1650), visible (GeForce RTX 3080) but selected points draw the same as unselected - (painting would actually respect the selection that is made though)

Added subscriber: @AndyBrunton

Added subscriber: @AndyBrunton

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can see the verts in a situation like this:

image.png
#102519.blend

But I cant really select them in case Preferences > Viewport > Subdivision > GPU Subdivision is checked.
(will check if this is a known thing with GPU subdivision...)

For now: does it make a difference on your side? (unchecking Preferences > Viewport > Subdivision > GPU Subdivision)

I can see the verts in a situation like this: ![image.png](https://archive.blender.org/developer/F13916991/image.png) [#102519.blend](https://archive.blender.org/developer/F13916994/T102519.blend) But I cant really select them in case `Preferences` > `Viewport` > `Subdivision` > `GPU Subdivision` is checked. (will check if this is a known thing with GPU subdivision...) For now: does it make a difference on your side? (unchecking `Preferences` > `Viewport` > `Subdivision` > `GPU Subdivision`)

Hey - thank you, that actually fixes the issue I was having!

Hey - thank you, that actually fixes the issue I was having!

In #102519#1446196, @lichtwerk wrote:
But I cant really select them in case Preferences > Viewport > Subdivision > GPU Subdivision is checked.
(will check if this is a known thing with GPU subdivision...)

note that selection actually works (but is not really shown (selected/unselected cannot be distinguished)

> In #102519#1446196, @lichtwerk wrote: > But I cant really select them in case `Preferences` > `Viewport` > `Subdivision` > `GPU Subdivision` is checked. > (will check if this is a known thing with GPU subdivision...) note that selection actually works (but is not really shown (selected/unselected cannot be distinguished)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Also note that I can confirm the missing vertices in vertexpaint mode

Also note that I can confirm the missing vertices in vertexpaint mode
Philipp Oeser changed title from Weight Painting - Vertex Selection + Subdivision modifier to Regression: GPU subdivision: vertex paintmask: vertices (or their selection status) not visible in weightpaint/vertexpaint 2022-11-15 15:10:35 +01:00

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

@kevindietrich : mind checking?

Setting to High priority (even if the bug appears to be a bit older...)

@kevindietrich : mind checking? Setting to High priority (even if the bug appears to be a bit older...)

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

There was a report earlier for paint mask #99016 (Regression: GPU subdivision: paint mask selection not visible when mesh is smooth shaded)

There was a report earlier for paint mask #99016 (Regression: GPU subdivision: paint mask selection not visible when mesh is smooth shaded)

In #102519#1446392, @PratikPB2123 wrote:
There was a report earlier for paint mask #99016 (Regression: GPU subdivision: paint mask selection not visible when mesh is smooth shaded)

That one is for face paintmask selection, now it is about verts

> In #102519#1446392, @PratikPB2123 wrote: > There was a report earlier for paint mask #99016 (Regression: GPU subdivision: paint mask selection not visible when mesh is smooth shaded) That one is for **face** paintmask selection, now it is about **verts**
Miguel Pozo self-assigned this 2022-11-23 16:03:26 +01:00
Miguel Pozo changed title from Regression: GPU subdivision: vertex paintmask: vertices (or their selection status) not visible in weightpaint/vertexpaint to GPU subdivision: vertex paintmask: vertices (or their selection status) not visible in weightpaint/vertexpaint 2022-11-23 17:30:32 +01:00

This was marked as a regression, and as working in Blender 3.0.1,
but AFAIK GPU subdivision was implemented in 3.1 and this has never worked.

This was marked as a regression, and as working in Blender 3.0.1, but AFAIK GPU subdivision was implemented in 3.1 and this has never worked.

Yep, regression as in "default behavior broke"

Yep, regression as in "default behavior broke"

This issue was referenced by 6c4c09b2df

This issue was referenced by 6c4c09b2dfa3c657fae7187467d71a26a254fa34

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102519
There is no content yet.